--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "reactjs"
   ],
   "dependencies": {
-    "body-parser": "^1.15.0",
-    "express": "4.x",
-    "q": "^1.4.1"
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "bootstrap-sass": "^3.3.6",
+    "jquery": "^3.0.0",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-router": "^2.4.1"
   },
   "devDependencies": {
     "babel-cli": "^6.7.7",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "gulp": "*",
@@ -21,6 +26,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^1.5.3",
+    "webpack-stream": "^3.2.0"
   }
 }
