Add schema checking + other error handling improvements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-tornado
-sqlalchemy
-pika
-passlib
-arrow
-alembic
-pymysql
-tabulate
-loremipsum
-bleach
+tornado==4.4.1
+sqlalchemy==1.0.15
+pika==0.10.0
+passlib==1.6.5
+arrow==0.8.0
+alembic==0.8.7
+pymysql==0.7.9
+tabulate==0.7.5
+loremipsum==1.0.5
+bleach==1.4.3
+cerberus==1.0.1
